# learnqt

modbus/: CMakeLists.txt
modbus/src/app/: CMakeLists.txt  main.cpp
modbus/src/modbus/: CMakeLists.txt  modbus.cpp  modbus.h  modbus.ui
myfirstqtproj/: CMakeLists.txt
myfirstqtproj/src/app/: CMakeLists.txt  main.cpp
myfirstqtproj/src/modbus/: CMakeLists.txt  modbus.cpp  modbus.h  modbus.ui
